--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <h1 class="header">Our Pricing</h1>
       <div class="toggle">
         <span class="toggle__option">Annually</span>
-
+        <div class="toggle__button">
+          <input itemid="toggle" type="checkbox" id="switch" />
+          <label for="switch"></label>
+        </div>
         <span class="toggle__option">Monthly</span>
       </div>
       <div class="grid">
