--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <div class="toggle">
         <span class="toggle__option">Annually</span>
         <div class="toggle__button">
-          <input itemid="toggle" type="checkbox" id="switch" />
-          <label for="switch"></label>
+          <input id="toggle" type="checkbox" />
+          <label for="toggle"></label>
         </div>
         <span class="toggle__option">Monthly</span>
       </div>
       <div class="grid">
         <div class="card">
           <h2 class="card__header">Basic</h2>
-          <h3 class="card__price card__price--monthly"><span>&dollar;</span>19.99</h3>
-          <h3 class="card__price card__price--annually"><span>&dollar;</span>199.99</h3>
+          <h3 class="card__price monthly"><span>&dollar;</span>19.99</h3>
+          <h3 class="card__price annually"><span>&dollar;</span>199.99</h3>
           <div class="card__options">
             <div class="card__divider"></div>
             <h4 class="card__option">500 GB Storage</h4>
@@ -39,8 +39,8 @@
         </div>
         <div class="card selected">
           <h2 class="card__header">Professional</h2>
-          <h3 class="card__price card__price--monthly"><span>&dollar;</span>24.99</h3>
-          <h3 class="card__price card__price--annually"><span>&dollar;</span>249.99</h3>
+          <h3 class="card__price monthly"><span>&dollar;</span>24.99</h3>
+          <h3 class="card__price annually"><span>&dollar;</span>249.99</h3>
           <div class="card__options">
             <div class="card__divider"></div>
             <h4 class="card__option">1 TB Storage</h4>
@@ -54,8 +54,8 @@
         </div>
         <div class="card">
           <h2 class="card__header">Master</h2>
-          <h3 class="card__price card__price--monthly"><span>&dollar;</span>39.99</h3>
-          <h3 class="card__price card__price--annually"><span>&dollar;</span>399.99</h3>
+          <h3 class="card__price monthly"><span>&dollar;</span>39.99</h3>
+          <h3 class="card__price annually"><span>&dollar;</span>399.99</h3>
           <div class="card__options">
             <div class="card__divider"></div>
             <h4 class="card__option">2 TB Storage</h4>
