added bg images

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <main class="page">
+      <img src="images/bg-top.svg" alt="lines" class="img img--1">
+      <img src="images/bg-bottom.svg" alt="lines" class="img img--2">
       <h1 class="header">Our Pricing</h1>
       <div class="toggle">
         <span class="toggle__option">Annually</span>
